@@ -7,13 +7,16 @@ import org.bukkit.OfflinePlayer;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.SkullMeta;
 import org.bukkit.profile.PlayerTextures;
-import org.jetbrains.annotations.NotNull;
+import org.jspecify.annotations.NullMarked;
+
+import xyz.bitsquidd.bits.lib.config.BitsConfig;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Base64;
 import java.util.UUID;
 
+@NullMarked
 public final class SkullBuilder {
     private static final Material SKULL_MATERIAL = Material.PLAYER_HEAD;
 
@@ -28,7 +31,7 @@ public final class SkullBuilder {
         }
     }
 
-    public SkullBuilder(@NotNull ItemStack base) {
+    public SkullBuilder(ItemStack base) {
         if (base.getType() != SKULL_MATERIAL) {
             throw new IllegalArgumentException("Base ItemStack must be a " + SKULL_MATERIAL.toString());
         }
@@ -39,71 +42,71 @@ public final class SkullBuilder {
         }
     }
 
-    public @NotNull ItemStack build() {
+    public ItemStack build() {
         item.setItemMeta(meta);
         return item.clone();
     }
 
-    public SkullBuilder owner(@NotNull OfflinePlayer player) {
+    public SkullBuilder owner(OfflinePlayer player) {
         meta.setPlayerProfile(player.getPlayerProfile());
         return this;
     }
 
-    public SkullBuilder owner(@NotNull UUID uuid) {
+    public SkullBuilder owner(UUID uuid) {
         meta.setOwningPlayer(Bukkit.getOfflinePlayer(uuid));
         return this;
     }
 
-    public SkullBuilder texture(@NotNull String base64) {
+    public SkullBuilder texture(String base64) {
         try {
             PlayerProfile profile = createProfileWithTexture(extractUrlFromBase64(base64));
             meta.setPlayerProfile(profile);
         } catch (Exception e) {
-            Bukkit.getLogger().warning("Failed to set skull texture from base64: " + e.getMessage());
+            BitsConfig.getPlugin().getLogger().warning("Failed to set skull texture from base64: " + e.getMessage());
         }
         return this;
     }
 
-    public SkullBuilder textureFromUrl(@NotNull String url) {
+    public SkullBuilder textureFromUrl(String url) {
         try {
             PlayerProfile profile = createProfileWithTexture(url);
             meta.setPlayerProfile(profile);
         } catch (Exception e) {
-            Bukkit.getLogger().warning("Failed to set skull texture from URL: " + url + " - " + e.getMessage());
+            BitsConfig.getPlugin().getLogger().warning("Failed to set skull texture from URL: " + url + " - " + e.getMessage());
         }
         return this;
     }
 
-    public SkullBuilder profile(@NotNull PlayerProfile profile) {
+    public SkullBuilder profile(PlayerProfile profile) {
         meta.setPlayerProfile(profile);
         return this;
     }
 
-    public static SkullBuilder fromBase64(@NotNull String base64) {
+    public static SkullBuilder fromBase64(String base64) {
         return new SkullBuilder().texture(base64);
     }
 
-    public static SkullBuilder fromUrl(@NotNull String url) {
+    public static SkullBuilder fromUrl(String url) {
         return new SkullBuilder().textureFromUrl(url);
     }
 
-    public static SkullBuilder fromUuid(@NotNull UUID uuid) {
+    public static SkullBuilder fromUuid(UUID uuid) {
         return new SkullBuilder().owner(uuid);
     }
 
-    public static SkullBuilder fromPlayer(@NotNull OfflinePlayer player) {
+    public static SkullBuilder fromPlayer(OfflinePlayer player) {
         return new SkullBuilder().owner(player);
     }
 
-    private PlayerProfile createProfileWithTexture(@NotNull String url) throws MalformedURLException {
+    private PlayerProfile createProfileWithTexture(String url) throws MalformedURLException {
         PlayerProfile profile = Bukkit.getServer().createProfile(UUID.randomUUID());
         PlayerTextures textures = profile.getTextures();
-        textures.setSkin(new URL(url));
+        textures.setSkin(URI.create(url).toURL());
         profile.setTextures(textures);
         return profile;
     }
 
-    private String extractUrlFromBase64(@NotNull String base64) {
+    private String extractUrlFromBase64(String base64) {
         try {
             byte[] decodedBytes = Base64.getDecoder().decode(base64);
             String decodedString = new String(decodedBytes);
@@ -124,4 +127,5 @@ public final class SkullBuilder {
             throw new IllegalArgumentException("Invalid base64 string: " + e.getMessage(), e);
         }
     }
+
 }
